# struct_as_array

./: Cargo.toml  README.md
src/: lib.rs
tests/: iter_test.rs
