[package]
name = "struct_as_array"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Nikitamuraviev10/struct_as_array.git"
categories = ["no-std", "proc-macro"]
keywords = ["derive", "struct", "array", "iterator"]

[lib]
proc-macro = true

[dependencies]
syn = "0.8"
quote = "0.2"
