[package]
name = "struct_as_array"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Nikitamuraviev10/struct_as_array.git"
categories = ["no-std", "proc-macro"]
keywords = ["derive", "struct", "array", "iterator"]
authors = ["Nikita <nikitamuraviev10@yandex.ru>"]
description = "A Rust library that allows you to represent the structure as an array"
homepage = "https://github.com/Nikitamuraviev10/struct_as_array.git"
documentation = "https://docs.rs/struct_as_array"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "0.8"
quote = "0.2"
